- added linting and github workflows